feat(app): Application 메인 실행 로직 추가